--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,7 +31,7 @@
 
 		<script src="/js/reveal.min.js"></script>
 		<script>
-		var computedMd = <%- JSON.stringify(computedMd) %>;
+		var computedMd = <%- JSON.stringify(m) %>;
 		</script>
 		<script src="/dist/index.min.js"></script>
 	</body>
